# xv6-riscv-cmake

./: CMakeLists.txt  README.md  extract_symbols_bypass.sh
